試しにコミットしてみる

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
         こちらはdivタグです！
     </div>
 
-    <h1>
+    <!-- <h1> -->
+    <h1 style="width: 400px; margin: auto;">
+    <!-- <h1 style="text-align: center"> -->
+    
         a
         <br>
         a a
