<h1>にbを追加した

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </div>
 
     <h1>
-        a
+        a                   b
         <br>
-        aa
+        aa                  b
         <br>
-        aaa
+        aaa                 b
         <br>
-        aaaa
+        aaaa                b
         <br>
-        aaaaa
+        aaaaa               b
         <br>
-        aaaaaa
+        aaaaaa              b
         <br>
         
     </h1>
