四角の幅を広げた

--- a/index.html
+++ b/index.html
@@ -18,12 +18,21 @@
         こちらはdivタグです！
     </div>
 
-    <h1>
+    <!-- <h1> -->
+    <h1 style="width: 800px; margin: auto;">
+    <!-- <h1 style="text-align: center"> -->
+    
         a
         <br>
-        aa
+        a a
         <br>
-        aaa
+        a a a
+        <br>
+        a a a a
+        <br>
+        a a a a a
+        <br>
+        a a a a a a
         <br>
         
     </h1>
