余計なものを消した。

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style> -->
 </head>
 
-<body bgcolor="#101a0E" text="#dc26c3">
+<body bgcolor=     text="#dc26c3">
 
     <p1>
 
@@ -34,30 +34,29 @@
         こちらはdivタグです！
     </div>
 
-    <h1>
-        <!-- <h1> -->
-        <h1 style="width: 800px; margin: auto;">
-            <!-- <h1 style="text-align: center"> -->
+    <!-- <h1> -->
+    <h1 style="width: 800px; margin: auto;">
+        <!-- <h1 style="text-align: center"> -->
 
-            a
-            <br>
-            a a
-            <br>
-            a a a
-            <br>
-            a a a a
-            <br>
-            a a a a a
-            <br>
-            aaaaaa
-            bbbbbb
-            a a a a a a
-            <br>
+        a
+        <br>
+        a a
+        <br>
+        a a a
+        <br>
+        a a a a
+        <br>
+        a a a a a
+        <br>
+        aaaaaa
+        bbbbbb
+        a a a a a a
+        <br>
 
-        </h1>
-        <p>
-            これはPタグです。
-        </p>
+    </h1>
+    <p>
+        これはPタグです。
+    </p>
 </body>
 
 </html>
