--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <td>セル６</td>
         </tr>
     </table>
-    <p action="expamle.php" method="post" name="contact-form">
+    <p action="example.php" method="post" name="contact-form">
         ここにフォームの部品が入ります。
         <p>
         <input type="text" placeholder="名字" name="firstname" id="firstname" />
@@ -85,7 +85,7 @@
         <input type="checkbox" name="travel" value="アフリカ" id="africa" />
         <label for="africa">アフリカ</label>
     </p>
-        <a herf="./animation.html"> 
+        <a href="./animation.html"> 
         <input type="submit" value="アニメーションページに飛ぶ" />
         </a>
         <input
@@ -98,8 +98,8 @@
             <input type="submit" value="study_flexboxページに飛ぶ"
         /></a>
 
-        <a href="./study_inherit.html">
-        <input type="submit" value="study_inheritページに飛ぶ" />
+        <a href="./study_quiz.html">
+        <input type="submit" value="study_quizページに飛ぶ" />
         </a>
     </p>
     <p>
