--- a/study_javasctipt.html
+++ b/study_javasctipt.html
@@ -2,140 +2,28 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8" />
-        <title>study_javasctipt</title>
-        <link rel="stylesheet" href="CSS/style.css" />
-        <script type="text/javascript" src="JS/script.js"></script>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>javaScript</title>
     </head>
-    <header>header</header>
-    <!-- <body
-        class="UI_Build_Assistant"
-    > -->
-    <body1>
-        <div>
-            <nav><h1>left</h1></nav>
-            <main>
-                <ul>
-                    <li>c</li>
-                    <li>e</li>
-                    <li>n</li>
-                    <li>t</li>
-                    <li>e</li>
-                    <li>r</li>
-                </ul>
-            </main>
-            <aside>
-                right
-                <!-- <div class="sale_box" id="makeImg"> -->
-    <table border="0" class="sale_box">
-        <tr>
-            <th colspan="3" class="sale"><bold>SALE</bold><a></th>
-        </tr>
-        <tr>
-            <th rowspan="2">MAX</th>
-            <th rowspan="2"><a class="rate">70</a></th>
-            <th><a class="percent">%</a></th>
-        </tr>
-        <tr>
-            <th>OFF</th>
-        </tr>
-        <tr>
-                <td >2023</td>
-        </tr>
-                <tr>
-                <th colspan="3">01.04 wed - 01.10 tue</th>
-                </tr>
-    </table>
-                </div>
-            </aside>
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+        crossorigin="anonymous"
+    />
+    <body>
+        <div class="container">
+            <div class="mt-3 alert alert-dark" role="alert">
+                A simple primary alert—check it out!
+            </div>
+            <div class="d-flex justify-content-center">
+                <button type="button" class="btn btn-success">Click!!</button>
+                <button type="button" class="ms-1 btn btn-success">Primary</button>
+                <button type="button" class="ms-1 btn btn-success">Primary</button>
+                <button type="button" class="ms-1 btn btn-success">Primary</button>
+            </div>
         </div>
-    </body1>
-    <footer>footer フッター</footer>
-    <img src="image/lady.png" alt="説明文"
-    <table border="10">
-    <table border="10">
-        <tr>
-            <th>セル１</th>
-            <th>セル２</th>
-        </tr> <tr>
-            <td rowspan="2">セル３＋５</td>
-            <td>セル４</td>
-        </tr>
-        <tr>
-            <td>セル６</td>
-        </tr>
-    </table>
-    <p action="expamle.php" method="post" name="contact-form">
-        ここにフォームの部品が入ります。
-        <p>
-        <input type="text" placeholder="名字" name="firstname" id="firstname" />
-        <input type="text" placeholder="名前" name="lastname" id="lastname " />
-        </p>
-        <p>
-        <input type="radio" name="gender" value="男" />男
-        <input type="radio" name="gender" value="女" checked />女
-        <input type="radio" name="gender" value="その他" />その他 <br /><br />
-        </p>
-        <p>
-        行きたい地域：
-        <input type="checkbox" name="travel" value="日本国内" id="japan" />
-        <label for="japan">日本国内</label>
-        <input type="checkbox" name="travel" value="ヨーロッパ" id="europe" />
-        <label for="europe">ヨーロッパ</label>
-        <input type="checkbox" name="travel" value="東南アジア" id="asia" />
-        <label for="asia">東南アジア</label>
-        <input type="checkbox" name="travel" value="アフリカ" id="africa" />
-        <label for="africa">アフリカ</label>
-    </p>
-        <input type="submit" value="サンプルページに飛ぶ" />
-        <input
-            type="submit"
-            src="image/icons8-home-button-50.png"
-            alt="送信する"
-        />
-        <input type="submit" src="image/dl.png" value="送信する" />
-        <a href="./study_flexbox.html">
-            <input type="submit" value="study_flexboxページに飛ぶ"
-        /></a>
-
-        <a href="./study_inherit.html">
-        <input type="submit" value="study_inheritページに飛ぶ" />
-        </a>
-    </p>
-    <p>
-        血液型
-        <select name="bloodtype" id="">
-            <option value="A">A</option>
-            <option value="B">B</option>
-            <option value="O">O</option>
-            <option value="AB">AB</option>
-            <option value="不明">不明</option>
-        </select>
-        型
-    </p>
-        <textarea
-            name="message"
-            id=""
-            cols="100"
-            rows="15"
-            placeholder="メッセージを入力"
-        ></textarea>
-    </form>
-    <p>
-    <!-- <a href="./index2.html"> -->
-        <input type="submit" value="送信する。" />
-    <!-- </a> -->
-    </p>
-    <p>
-    角丸大 btn--orange
-    <a href="study_flexbox.html" class="btn btn--orange btn--radius">go flexboxページ</a>
-    </p>
-    <p>
-    <a href="study_flexbox.html" class="btn btn-hmoon"><span>PUSH--PUSH！</span></a>
-    </p>
-    <p>
-    <a href="study_flexbox.html" class="btn btn-bside" ><span>PUSH_________FLEXBOX</span></a >
-    </p>
-    <p>
-    <a href="study_inherit.html" class="btn btn-marrow"><span>PUSH！継承</span></a>
-    </p>
+    </body>
+    <script src="./JS/study_javascript.js"></script>
 </html>
