とりあえず1問目は動くようになった。

--- a/study_quiz.html
+++ b/study_quiz.html
@@ -23,7 +23,7 @@
     <body>
         <div class="container">
             <div id="js-question" class="mt-3 alert alert-dark" role="alert">
-                A simple primary alert—check it out! Quiz のページ
+                A simple primary alert—check it out!
             </div>
             <div class="d-flex justify-content-center">
                 <button type="button" class="btn btn-success">Click!!</button>
@@ -39,5 +39,5 @@
             </div>
         </div>
     </body>
-    <script src="./JS/app.js"></script>
+    <script src="JS/app.js"></script>
 </html>
